# mcp-servers

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_chainlit.sh
.idx/: dev.nix
mcp-button-state/: Dockerfile  requirements.txt  server.py
mcp-button-state/static/: index.html
mcp-greet/: .dockerignore  CLAUDE.md  Dockerfile  README.md  chainlit.md  cloudbuild.yaml  config.json  deploy-gcloud.sh  pyproject.toml  requirements.txt  run_chainlit.sh  run_inspector.sh  run_one_tool.sh  run_server.sh  server.py  sse_server.py
mcp-strudel/: Dockerfile  pyproject.toml  server.py  sse_server.py
mcp-strudel/static/: index.html
