[project]
name = "mcp-server"
version = "0.1.0"
description = "This are simple MCP servers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai",
    "chainlit"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "sse_server"]
